--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.7",
@@ -27,6 +28,7 @@
     "@types/mongoose": "^5.11.96",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "embabi-store": "file:",
     "express": "^4.21.0",
