adding verify mail

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3000
 MONGO_URI = mongodb://localhost:27017/embabistore
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=firedateto@gmail.com
+SMTP_PASS=cise ihli zywc zsra
