adding forgot password

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SMTP_PORT=587
 SMTP_USER=firedateto@gmail.com
 SMTP_PASS=cise ihli zywc zsra
 JWT_SECRET=embabistore
+FRONTEND_URL=http://localhost:4200
