--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-PORT=3000
-MONGO_URI = mongodb://localhost:27017/embabistore
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
-SMTP_USER=firedateto@gmail.com
-SMTP_PASS=cise ihli zywc zsra
-JWT_SECRET=embabistore
-FRONTEND_URL=http://localhost:4200
+heroku config:set JWT_SECRET=embabistore
+heroku config:set SMTP_HOST=smtp.gmail.com
+heroku config:set SMTP_PORT=587
+heroku config:set SMTP_USER=firedateto@gmail.com
+heroku config:set SMTP_PASS="cise ihli zywc zsra"
+heroku config:set FRONTEND_URL=https://your-frontend-url.com
