--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "typescript": "^5.6.2"
   },
   "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "postinstall": "npm run build",
-    "dev": "nodemon src/server.ts"
+    "dev": "nodemon",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -41,11 +39,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16",
-    "typescript": "^4.x.x",
-    "@types/node": "^16.x.x"
-  },
-  "engines": {
-    "node": "20.x"
+    "nodemailer": "^6.9.16"
   }
 }
